# Scrap-Crawl

./: Prompt.txt
aio-scrap-crawl/: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CONTEXT.md  MERGE_ANALYSIS.md  MIGRATION_NOTES.md  README.md  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
aio-scrap-crawl/apps/cli/: package.json  tsup.config.ts
aio-scrap-crawl/apps/desktop/: README.md
aio-scrap-crawl/apps/web/: README.md
aio-scrap-crawl/config/: README.md  aio.config.example.json
aio-scrap-crawl/modules/ai/: package.json
aio-scrap-crawl/modules/captcha/: package.json
aio-scrap-crawl/modules/security/: package.json
aio-scrap-crawl/scripts/: example-crawl.mjs
aio-scrap-crawl/services/py-ai/: README.md  requirements.txt
repos-captch/ai-captcha-bypass-main/: README.md  requirements.txt
repos-captch/ai-captcha-bypass-main/.github/: CODEOWNERS
repos/katana-dev/: .goreleaser.yml  Dockerfile  README.md  go.mod  go.sum
repos/maxun-develop/: .dockerignore  .gitignore  .sequelizerc  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  ENVEXAMPLE  README.md  SETUP.md  docker-compose.yml  index.html  nginx.conf  package.frontend.json  package.json  tsconfig.json
repos/maxun-develop/browser/: .dockerignore  Dockerfile  package.json  server.ts  tsconfig.json
repos/wipedown-main/: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
repos/wipedown-main/wipedown/: __init__.py  cleaner.py  cli.py  engine.py  sanitizer.py
(+237 files in other folders)
